// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verificationCode > render correctly with error as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_12_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_12_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_12_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_12_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with error as string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-describedby="_r_v_"
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_u_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_v_"
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_u_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_v_"
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_u_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_v_"
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_u_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_v_"
        role="status"
      >
        test
      </span>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-describedby="_r_n_"
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_m_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_n_"
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_m_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_n_"
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_m_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_n_"
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_m_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_n_"
        role="status"
      >
        test
      </span>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_q_-0"
        id="_r_q_-label"
      >
        test
      </label>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_q_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_q_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_q_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_q_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_1a_-0"
          id="_r_1a_-label"
        >
          test
        </label>
        <span>
          description
        </span>
      </div>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_1a_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_1a_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_1a_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_1a_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_small__r5dpvj2 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_k_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_small__r5dpvj2 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_k_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_small__r5dpvj2 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_k_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_small__r5dpvj2 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_k_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="0"
          id="_r_14_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="1"
          id="_r_14_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="2"
          id="_r_14_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="3"
          id="_r_14_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-describedby="_r_17_"
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="0"
          id="_r_16_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_17_"
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="1"
          id="_r_16_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_17_"
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="2"
          id="_r_16_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-describedby="_r_17_"
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="true"
          data-testid="3"
          id="_r_16_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_success__1yhcak8e style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_56__1yhcak82u"
        id="_r_17_"
        role="status"
      >
        test
      </span>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_0_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_0_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_0_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_0_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_2_-0"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_2_-1"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_2_-2"
          pattern="[0-9]*"
          placeholder="3"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_2_-3"
          pattern="[0-9]*"
          placeholder="7"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="4"
          id="_r_2_-4"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="5"
          id="_r_2_-5"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_8_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_8_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_8_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_8_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_i_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_i_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_i_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_i_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_4_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_4_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_4_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_4_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste when type is not number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_e_-0"
          placeholder=""
          type="text"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_e_-1"
          placeholder=""
          type="text"
          value="h"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_e_-2"
          placeholder=""
          type="text"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_e_-3"
          placeholder=""
          type="text"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="4"
          id="_r_e_-4"
          placeholder=""
          type="text"
          value="a"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="5"
          id="_r_e_-5"
          placeholder=""
          type="text"
          value="*"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_6_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_6_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_6_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_6_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_a_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_a_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_a_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_a_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          id="_r_c_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          id="_r_c_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          id="_r_c_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          id="_r_c_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should render correctly disabled true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__r5dpvj5"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="0"
          disabled=""
          id="_r_1e_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="1"
          disabled=""
          id="_r_1e_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="2"
          disabled=""
          id="_r_1e_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="styles_large__r5dpvj0 styles__r5dpvj4"
          data-success="false"
          data-testid="3"
          disabled=""
          id="_r_1e_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
